--- a/index.html
+++ b/index.html
@@ -106,5 +106,10 @@
     <div id="map"></div>
     <div id="more">Поподробнее вскоре</div>
   </body>
+    <script
+    src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c1564056-15e8-45bb-aa5c-a91fde9a6560"
+    type="text/javascript"
+  ></script>
+  <script src="/js/tit.js"></script>
 
 </html>
