--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">  
-    <link rel="stylesheet" type="text/css" href="trash.css">
+    <link rel="stylesheet" type="text/css" href="css/trash.css">
   </head>
   <body>
     <div class="row">
