--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
     src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c1564056-15e8-45bb-aa5c-a91fde9a6560"
     type="text/javascript"
   ></script>
-  <script src="/js/tit.js"></script>
+  <script src="/js/trash.js"></script>
 
 </html>
