--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="/img/296726.svg" type="image/x-icon">  
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
     <link rel="stylesheet" type="text/css" href="css/trash.css">
   </head>
   <body>
