--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
     src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=4732e64d-b637-4aed-8844-6802dcc23576"
     type="text/javascript"
   ></script>
-  <script src="/trash/js/trash.js"></script>
+  <script src="/js/trash.js"></script>
 
 </html>
